--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -1,6 +1,6 @@
-FROM keymetrics/pm2:latest-alpine 
-COPY . /src
+FROM keymetrics/pm2:latest-alpine
 WORKDIR /src
+COPY . .
 RUN npm config set registry https://registry.npm.taobao.org && \
 npm i
 EXPOSE 3000
