--- a/vue/Dockerfile
+++ b/vue/Dockerfile
@@ -1,10 +1,10 @@
 # build
-FROM node:11-alpine as builder
+FROM node:11-alpine AS builder
 WORKDIR /src
 COPY . .
-RUN npm config set registry https://registry.npm.taobao.org && \
-npm i && \
-npm run build
+RUN npm config set registry https://registry.npm.taobao.org \
+  && npm i \
+  && npm run build
 # deploy
 FROM nginx:1.14-alpine
 COPY nginx.conf /etc/nginx/
